[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
iota-client = { path = "../iota-client", features = ["storage", "mqtt"] }
tokio = { version = "1.5", features = ["full"] }
hex = "0.4"
dotenv = "0.15"
serde_json = "1.0"
serde = "1.0"
ureq = { version = "2.1", features = ["json"] }

[[example]]
name = "01_get_info"
path = "01_get_info.rs"

[[example]]
name = "02_generate_seed"
path = "02_generate_seed.rs"

[[example]]
name = "03_generate_addresses"
path = "03_generate_addresses.rs"

[[example]]
name = "04_get_balance"
path = "04_get_balance.rs"

[[example]]
name = "05_get_address_outputs"
path = "05_get_address_outputs.rs"

[[example]]
name = "06_simple_message"
path = "06_simple_message.rs"

[[example]]
name = "07_get_message_metadata"
path = "07_get_message_metadata.rs"

[[example]]
name = "08_data_message"
path = "08_data_message.rs"

[[example]]
name = "09_transaction"
path = "09_transaction.rs"

[[example]]
name = "10_mqtt"
path = "10_mqtt.rs"

[[example]]
name = "indexation"
path = "indexation.rs"

[[example]]
name = "transaction"
path = "transaction.rs"

[[example]]
name = "multiple_outputs"
path = "multiple_outputs.rs"

[[example]]
name = "consolidation"
path = "consolidation.rs"

[[example]]
name = "create_max_dust"
path = "create_max_dust.rs"

[[example]]
name = "custom_inputs"
path = "custom_inputs.rs"

[[example]]
name = "custom_payload"
path = "custom_payload.rs"

[[example]]
name = "search_address"
path = "search_address.rs"

[[example]]
name = "custom_parent"
path = "custom_parent.rs"

[[example]]
name = "dust"
path = "dust.rs"

[[example]]
name = "txspam"
path = "txspam.rs"

[[example]]
name = "storage"
path = "storage.rs"

[[example]]
name = "peers"
path = "peers.rs"

[[example]]
name = "quorum"
path = "quorum.rs"

[[example]]
name = "message_time"
path = "message_time.rs"

[[example]]
name = "send_all"
path = "send_all.rs"

[[example]]
name = "split_all"
path = "split_all.rs"

[[example]]
name = "mnemonic"
path = "mnemonic.rs"

[[example]]
name = "get_funds"
path = "get_funds.rs"

[[example]]
name = "split_outputs_single_address"
path = "split_outputs_single_address.rs"

[[example]]
name = "0_address_generation"
path = "offline_signing/0_address_generation.rs"

[[example]]
name = "1_transaction_preparation"
path = "offline_signing/1_transaction_preparation.rs"

[[example]]
name = "2_transaction_signing"
path = "offline_signing/2_transaction_signing.rs"

[[example]]
name = "3_send_message"
path = "offline_signing/3_send_message.rs"

