[package]
name = "iota-bundle-miner"
version = "0.1.0-alpha.0"
authors = ["bingyanglin <bingyang.lin@iota.org>"]
edition = "2018"

[lib]
name = "iota_bundle_miner"

[dependencies]
bee-ternary = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-crypto = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-transaction = { git = "https://github.com/Alex6323/bee-p.git", rev = "02965e78a5cd43d0fb773771470ab3d891066562" }
bee-signing = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
tokio = { version = "1.4", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
futures = { version = "0.3"}
criterion = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "miner_benchmark"
harness = false