[package]
name = "iota-bundle-miner"
version = "0.1.0-alpha.0"
authors = ["bingyanglin <bingyang.lin@iota.org>"]
edition = "2018"

[lib]
name = "iota_bundle_miner"

[dependencies]
bee-ternary = { version = "0.4.2-alpha", features = ["serde1"] }
iota-crypto = { git = "https://github.com/thibault-martinez/crypto.rs", rev = "03b3966eea016f6013d65734a2a24a3566cb0db4", features = ["kerl_deprecated_do_not_use", "wots_deprecated_do_not_use"] }
bee-transaction = { git = "https://github.com/Alex6323/bee-p.git", rev = "5955b30e01f3b9bf742a5e967c0e08bf5244fd75" }
tokio = { version = "1.4", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
futures = { version = "0.3"}
criterion = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "miner_benchmark"
harness = false