[package]
name = "iota-bundle-miner"
version = "0.1.0-alpha.0"
authors = ["bingyanglin <bingyang.lin@iota.org>"]
edition = "2018"

[lib]
name = "iota_bundle_miner"

[dependencies]
bee-ternary = { version = "0.4.2-alpha", features = ["serde1"] }
iota-crypto = { version = "0.5.0", features = ["wots_deprecated_do_not_use", "kerl_deprecated_do_not_use"] }
bee-transaction = { git = "https://github.com/Alex6323/bee-p.git", rev = "cf47287dbb37861668d378ea3ae3b8c0f2852566" }
tokio = { version = "1.4", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
futures = { version = "0.3"}
criterion = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "miner_benchmark"
harness = false