[package]
name = "iota-client"
version = "1.0.1"
authors = ["Thoralf Müller <thoralf.mueller@iota.org", "Antony Dikov <antoni.dikov@iota.org>", "Bing-Yang Lin <bingyang.lin@iota.org>", "Lucas Nogueira <lucas.nogueira@iota.org>", "Nathan Jaremko <nathan@jaremko.ca>", "Yu-Wei Wu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Client to use IOTA APIs"
readme = "README.md"
repository = "https://github.com/iotaledger/iota.rs"
homepage = "https://www.iota.org"
documentation = "https://docs.rs/iota-client"
license = "Apache-2.0"

[lib]
name = "iota_client"

[dependencies]
bee-rest-api = "0.1.1"
bee-message = "0.1.5"
bee-pow = "0.1.0"
bee-common = "0.4.1"
iota-crypto = { version = "0.7.0", features = ["std", "blake2b", "ed25519", "random", "slip10", "bip39", "bip39-en"]}
url = "2.2.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
hex = "0.4.3"
tokio = { version = "1.12.0", features = ["macros", "sync", "rt-multi-thread", "rt", "time"], optional = true }
thiserror = "1.0.29"
num_cpus = "1.13.0"
log = "0.4.14"
regex = "1.5.4"
zeroize = { version = "1.4.1", features = ["zeroize_derive"] }

# sync
ureq = { version = "2.2.0", features = ["json"], optional = true }
# async
reqwest = { version = "0.11.4", features = ["json", "rustls-tls", "blocking"], default-features = false, optional = true }
futures = { version = "0.3.17", optional = true }

# MQTT
# todo replace by crates.io if 0.9 is released
rumqttc = { git = "https://github.com/bytebeamio/rumqtt", rev = "621a7b526936450e4e54a999eae0171bfd5bff6f", features = ["websocket"], optional = true }
# rumqttc = { version = "0.9", features = ["websocket"], optional = true}

# also used for storage
once_cell = { version = "1.8.0", optional = true }

# storage
async-trait = "0.1.51"
rusqlite = { version = "0.24.2", features = ["bundled"], optional = true }

# wasm
# patched version to work in browser and node.js
wasm-timer = { git = "https://github.com/PhilippGackstatter/wasm-timer", rev = "448c2be0c4feeb6b5df1da265489232dff2f03c1", optional = true }
# single thread pow for wasm
bee-crypto = { version = "0.2.1-alpha", optional = true }
bee-ternary = { version = "0.4.2-alpha", optional = true }
bytes = { version = "1.1.0", optional = true }

[features]
default = ["async"]
sync = ["ureq", "tokio", "futures"]
async = ["reqwest", "futures", "tokio"]
mqtt = ["rumqttc", "once_cell", "futures"]
storage = ["rusqlite", "once_cell"]
wasm = ["reqwest", "futures", "wasm-timer", "bee-crypto", "bee-ternary", "bytes"]
#fallback to local PoW
pow-fallback = []
