[package]
name = "iota-client"
version = "0.5.0-alpha.3"
authors = ["Nathan Jaremko <nathan@jaremko.ca>", "Yu-Wei Wu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Client to use Iota APIs"
repository = "https://github.com/iotaledger/iota.rs"
homepage = "https://github.com/iotaledger/iota.rs"
documentation = "https://docs.rs/iota-client"
license = "Apache-2.0"

[lib]
name = "iota_client"

[dependencies]
iota-bundle-miner = { path = "../iota-bundle-miner" }

bee-transaction = { git = "https://github.com/Alex6323/bee-p.git", rev = "cf47287dbb37861668d378ea3ae3b8c0f2852566" }
bee-ternary = { version = "0.4.2-alpha", features = ["serde1"] }
#reqwest = { version = "0.10.6", features = ["json", "rustls-tls", "native-tls-vendored", "blocking"], default-features = false }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.68", default-features = false }
chrono = { version = "0.4.12", default-features = false }
ureq = { version = "2.2.0", features = ["json"] }
#chrysalis2
slip10 = "0.4.3"
iota-crypto = { version = "0.5.0", features = ["ed25519", "random", "wots_deprecated_do_not_use", "kerl_deprecated_do_not_use"] }
blake2 = "0.9.2"
bee-common-derive = "0.1.1-alpha"
bee-message = { version  = "0.1.5", default-features = false, features = ["serde"] }
bee-common = { version = "0.4.1", default-features = false }
hex = { version = "0.4.3", default-features = false }
tokio = { version = "1.12.0", default-features = false, features = ["sync"] }

#quorum
once_cell = "1.7.2"

#pow
iota-model = {git = "https://github.com/iotaledger/iota.rs", rev = "0aa7e11b075bea17ae52b1f7dff51f3a13c9d914"}
num_cpus = { version = "1.13.0", default-features = false }
crossbeam = "0.7.3"
failure = "0.1.8"
iota-conversion = "0.5.1"

[dev-dependencies]
anyhow = "1.0.31"
smol = {version = "0.1.18", features = ["tokio02"] }
smol-potat = "0.3.3"

