[package]
name = "iota-constants"
version = "0.2.1"
authors = ["Nathan Jaremko <nathan@jaremko.ca>", "Yu-Wei Wu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Constants used by Iota"
repository = "https://github.com/iotaledger/iota.rs"
homepage = "https://github.com/iotaledger/iota.rs"
documentation = "https://docs.rs/iota-constants"
license = "MIT"

[lib]
name = "iota_constants"
path = "lib.rs"

[dependencies]