[package]
name = "iota-conversion"
version = "0.2.0"
authors = ["Nathan Jaremko <nathan@jaremko.ca>"]
edition = "2018"
description = "Converters used by Iota"
license = "MIT"

[lib]
name = "iota_conversion"
path = "lib.rs"

[dependencies]
failure = "0.1"
lazy_static = "1.3"
iota-constants = { version = "0.2.0", path = "../iota-constants" }

[dev-dependencies]
rand = "0.6"